class Browser:
    def process_row(self, row):
        """Process a single row and return a Series with string column"""
        # Implement browser logic here
        # For demonstration purposes, assume a simple browser action
        string_column = f"{row['ID']} {row['URL']} {row['browse transpose']}"
        return pd.Series({'string_column': string_column})